# so100-robotic-arm-teleop

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yaml  ci-cmake-fallback.sh
include/: perseus-arm-teleop.hpp
tests/: CMakeLists.txt  mock_serial_port.cpp  mock_serial_port.hpp  test_position_scaling.cpp  test_st3215_servo_reader.cpp  test_utils.cpp  test_utils.hpp
